force-app/main/default/objects/Use_Case__c/Use_Case__c.object-meta.xml
<CustomObject>
    <description>In software and systems engineering, a use case (pronounced /juːs/, a case in the use of a system) is a list of steps, typically defining interactions between a role (known in UML as an "actor") and a system, to achieve a goal. The actor can be a human or an external system.

In systems engineering, use cases are used at a higher level than within software engineering, often representing missions or stakeholder goals. The detailed requirements may then be captured in SysML or as contractual statements.</description>
    <label>Use Case</label>
    <nameField>
        <label>Use Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>