force-app/main/default/objects/Use_Case__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <inlineHelpText>External link to the Use Case Document or Folder</inlineHelpText>
    <label>External Link</label>
    <type>Url</type>
</CustomField>