force-app/main/default/objects/Use_Case__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External Reference Number or Code</inlineHelpText>
    <label>Reference Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>